--- a/style.css
+++ b/style.css
@@ -1,12 +1,29 @@
+*{
+    box-sizing: border-box;
+    color: aliceblue;
+    font-family: sans-serif;
+    font-size: 18px;
+}
 body {
-    background-color: bisque;
+    background: linear-gradient(rgb(230, 100, 101), rgb(145, 152, 229));
+    height: 100vh;
 }
 .main {
+    border: 1px solid orange;
+    border-radius: 5%;
+    display: inline-block;
+    padding-left: 100px;
     display: block;
     max-width: 1024;
     margin: 0 auto;
-    text-align: center;
+    text-align: left;
 }
 .avatar {
-    width: 20%;
+    width: 30%;
+}
+.footer {
+    text-align: right;
+}
+h1 {
+    text-align: center;
 }
